mix blend mode on mobile fixed

--- a/css/style.css
+++ b/css/style.css
@@ -833,18 +833,24 @@ h6 {
 
 
 @media screen and (max-width: 768px) {
+	#home-section {
+		mix-blend-mode: normal;
+	}
+
 	#student-title-wrapper {
 		width: 80vw;
 		position: relative;
 		top: 0;
 		left: 0;
 		margin-top: 3vh;
+		mix-blend-mode: normal;
 	}
 
 	#student-title,
 	#freelance-title {
 		font-size: 12px;
 		text-align: center;
+		color: #2F322D;
 	}
 
 	#freelance-title-wrapper {
@@ -854,7 +860,7 @@ h6 {
 		width: 80vw;
 		transform: translateX(0);
 		margin-top: 3vh;
-
+		mix-blend-mode: normal;
 	}
 
 	.functions {
@@ -874,10 +880,12 @@ h6 {
 
 	#first-name-title {
 		left: 0;
+		color: #2F322D;
 	}
 
 	#last-name-title {
 		left: 0;
+		color: #2F322D;
 	}
 
 	.paragraph-wrapper {
